# weavergen

./: .gitignore  8020_improvement_report.md  8020_validation_certificate.json  80_20_IMPLEMENTATION_SUCCESS.md  AUTO_INSTALL_ENHANCEMENT_COMPLETE.md  BPMN_8020_IMPROVEMENTS_SUMMARY.md  BPMN_ARCHITECTURE_DIAGRAM.md  BPMN_DRIVEN_ARCHITECTURE.md  BPMN_FIRST_ENHANCED_VISION.md  BPMN_FIRST_ULTRATHINK.md  BPMN_FIRST_WEAVERGEN_VISION.md  BPMN_IMPLEMENTATION_BLUEPRINT.md  BPMN_UNIFICATION_PLAN.md  BPMN_WEAVER_FORGE_SPANS.md  CLAUDE.md  COMMAND-AUDIT.md  COMPREHENSIVE_CLI_VALIDATION_REPORT.md  DEFINITION_OF_DONE.md  ENHANCED_BPMN_ARCHITECTURE_DIAGRAM.md  ENTERPRISE_SAS_GAPS.md  ENTERPRISE_SCRUM_ARCHITECTURE.md  EXAMPLE_MIGRATED_CORE.py  FOUR_LAYER_ARCHITECTURE_SUMMARY.md  GEMINI.md  INNOVATION_BREAKTHROUGH.md  INTEGRATION_ARCHITECTURE.md  LEAN_SIX_SIGMA_PROJECT_CHARTER_V2.md  LICENSE  MIGRATION_STEPS.md  Makefile.examples  OLLAMA_EXAMPLES_COMPLETE.md  OTEL_SPAN_ARCHITECTURE_VALIDATION.md  PHILOSOPHY_OF_EXECUTION_TRUTH.md  PROTOTYPE_KEY_INNOVATIONS.md  PROTOTYPE_TO_SRC_CONVERSION_PLAN.md  PROTOTYPE_TO_V1_MIGRATION_CHECKLIST.md  README.md  REAL_WORKING_LOOP.md  SKEPTICAL_GAPS_ANALYSIS.md  SPANS_DONT_LIE_PROOF.md  (+147 more)
adaptive_demo/: execution_history.json
bpmn_validation/: generation_spans.json  span_validation_report.json  (+1 more)
v2/weavergen/: .copier-answers.yml  .pre-commit-config.yaml  CLI_VALIDATION_REPORT.md  COMPLETE_TOOL_STRUCTURE.md  Dockerfile  GEMINI.md  MATURITY-MATRIX.md  README.md  ROADMAP.md  SEMANTIC_CLI_PROPOSAL.md  TOOL_SEMANTIC_CLI_PROPOSAL.md  WEAVER_CLI_DEMO.md  WEAVER_CLI_GENERATION_PLAN.md  build.sh  cli_spec.yaml  demo.py  demo_bpmn_first.py  demo_dogfood.py  demo_spans.py  demo_weaver_cli_generation.py  demo_workflow.py  generate_semconv.py  generated_semantics.yaml  governance.yaml  integrated_demo.py  pyproject.toml  temp_context1.txt  temp_context_combined.txt  temp_context_filtered.txt  test_bpmn_cli.py  test_bpmn_debug.py  test_bpmn_forge.py  test_bpmn_spans.py  test_cli_commands.py  test_direct_forge.py  test_forge.py  test_forge_spans.py  test_init_command.py  test_semantic.yaml  test_semantic_conventions.yaml  (+3 more)
v2/weavergen/.devcontainer/: devcontainer.json
v2/weavergen/.github/workflows/: test.yml
v2/weavergen/.lh/: README.md.json
v2/weavergen/.lh/prd/: weaver.md.json
v2/weavergen/.lh/prd/weaver/: BPMN-FIRST-GUIDE.md.json  README.md.json  ULTRA-ADVANCED-SERVICETASK-PRD.md.json  architecture-diagrams.md.json  command-diagrams.md.json  sequence-diagrams.md.json
v2/weavergen/.lh/src/weavergen/: cli.py.json  weaver_integration.py.json
v2/weavergen/.lh/src/weavergen/commands/: __init__.py.json  agents.py.json  forge.py.json  weaver.py.json
v2/weavergen/bpmn/: semantic_generation.bpmn  simple_workflow.bpmn
v2/weavergen/features/: certify.feature  errors.feature  generate-incremental.feature  generate-watch-hotreload.feature  init.feature
v2/weavergen/prd/weaver/: BPMN-FIRST-GUIDE.md  README.md  ULTRA-ADVANCED-SERVICETASK-PRD.md  architecture-diagrams.md  command-diagrams.md  sequence-diagrams.md
v2/weavergen/processes/: ai_optimization_workflow.bpmn  distributed_workflow.bpmn  process_mining_workflow.bpmn
v2/weavergen/roadmap/: phase_1_foundation.md  phase_2_enterprise_features.md  phase_3_market_leadership.md  pydantic_python.md  weaver_rust_cli.md  weavergen_orchestration.md
v2/weavergen/semantic_conventions/: registry_manifest.yaml  weavergen_new_spans.yaml  weavergen_tool_cli.yaml
v2/weavergen/semantic_conventions/model/: test-real-registry_common.yaml
v2/weavergen/semconv_registry/: registry_manifest.yaml
v2/weavergen/src/: data_providers.py  span_parser.py
v2/weavergen/src/commands/: __init__.py  agents.py  mermaid.py
v2/weavergen/src/visualizers/: __init__.py  mermaid.py
v2/weavergen/src/weavergen/: __init__.py  cli.py  cli_debug.py  cli_workflow.py  enhanced_instrumentation.py  weaver_integration.py
v2/weavergen/src/weavergen/ai/: code_optimization.py  optimization.py
v2/weavergen/src/weavergen/analytics/: predictive_semantics.py
v2/weavergen/src/weavergen/bpmn/: __init__.py  yaml_parser.py
v2/weavergen/src/weavergen/commands/: README.md  __init__.py  agents.py  bpmn.py  context.py  debug.py  forge.py  generate.py  mining.py  semantic.py  templates.py  validate.py  weaver.py  xes.py
v2/weavergen/src/weavergen/engine/: __init__.py  agent_service_tasks.py  engine.py  forge_service_tasks.py  instance.py  serializer.py  service_task.py  simple_engine.py  xes_service_tasks.py
v2/weavergen/src/weavergen/feedback/: self_improvement.py
v2/weavergen/src/weavergen/filters/: cli_commands.py  semconv_grouped_attributes.py  spiff_bpmn.py
v2/weavergen/src/weavergen/mining/: advanced.py
v2/weavergen/src/weavergen/orchestration/: distributed.py
v2/weavergen/src/weavergen/recommendations/: autonomous_semconv.py
v2/weavergen/src/weavergen/resources/templates/python/: ai_optimized_code.j2  bpmn_model.j2  cli_entry.j2  cli_model.j2  context.j2  decorator.j2  default-forge.yaml  distributed_task.j2  instrumentation.j2  meta_instrumentation.j2  module.j2  pydantic_model.j2  secure_service_task.j2  service_task.j2  span_decorator.j2  spiff_runner.j2  typer_app.j2  typer_command.j2  typer_process_cmd.j2
v2/weavergen/src/weavergen/security/: compliance.py
v2/weavergen/src/weavergen/semconv/: __init__.py  attributes.py
v2/weavergen/src/workflows/bpmn/agents/: agent_analysis.bpmn  agent_communication.bpmn  agent_generation.bpmn
v2/weavergen/src/workflows/bpmn/forge/: forge_init.bpmn
v2/weavergen/telemetry/: context.py
v2/weavergen/templates/cli/: tool_cli_main.j2  tool_command_group.j2
v2/weavergen/test_bpmn_cli/: registry_manifest.yaml
v2/weavergen/test_forge_output/: registry_manifest.yaml
v2/weavergen/test_registry/: registry_manifest.yaml
v2/weavergen/test_registry/model/: myapp_common.yaml  myapp_service.yaml
v2/weavergen/test_registry_cli_dir/: registry_manifest.yaml
v2/weavergen/test_registry_cli_dir/model/: test_registry_cli_common.yaml
v2/weavergen/tests/: __init__.py  test_cli.py  test_import.py
(+733 files in other folders)
